kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-ops-api
  namespace: $NAMESPACE
spec:
  replicas: $REPLICA
  selector:
    matchLabels:
      app: gitlab-ops-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 40%
      maxSurge: 1
  template:
    metadata:
      labels:
        app: gitlab-ops-api
    spec:
      containers:
      - name: gitlab-ops-api
        image: $CI_REGISTRY_IMAGE:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5001
      imagePullSecrets:
      - name: gitlab-ops-secret
