kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-ops-svc
  namespace: $NAMESPACE
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5001
  type: NodePort
  selector:
    app: gitlab-ops-api
