kube/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: gitlab-bulks-api-ing
  namespace: $NAMESPACE
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: $ING_HOST
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: gitlab-bulks-svc
                port:
                  number: 80
